[tool.poetry]
name = "retail-agent"
version = "0.1.0"
description = ""
authors = ["siddhant-mi <siddhant.pandey@mindinventory.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
semantic-router = {extras = ["local"], version = "^0.0.29"}
langchain = "^0.1.13"
scheduler = "^0.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
